animation jumpiness fix

--- a/app/assets/stylesheets/_patient.scss
+++ b/app/assets/stylesheets/_patient.scss
@@ -66,7 +66,7 @@
 
 
 
-.next {
+.navbar-fixed-bottom {
   background-color: #fff;
   padding: 10px;
   border-top: 1px solid #ccc;
